# linespy

./: README.md  pyproject.toml
src/: main.py
src/linespy/: board.py  cell.py  constants.py  errors.py  events.py
